Convert allFonts from GoogleFontsApi obj to UiFont obj
Co-authored-by: rick_haag@hotmail.com <rick_haag@hotmail.com>

--- a/notes/TODO.txt
+++ b/notes/TODO.txt
@@ -28,7 +28,7 @@
 
 
   -------
-  0a. remove magic strings from font.service
+  0. rename Font service to FontApi, model etc
   1. figure out why intellisense sucks
   2. look into GraphQL
   3. NgRx
