--- a/notes/TODO.txt
+++ b/notes/TODO.txt
@@ -22,6 +22,12 @@ UI to show selected fonts, button to remove(?)
     separate table (Y) or 
   ! flag on font object - rather than a separate table just have another value on font
 
+Add List ID field to Font - enum SELECTABLE / BLACKLISTED / AVAILABLE
+  - gets rid of blacklisted / selectable tables
+
+Pass list arrays instead of enum?
+
+Entire font family added to blacklist and selectable
 
 __________________________________
 Mike Tasks
