--- a/notes/TODO.txt
+++ b/notes/TODO.txt
@@ -18,11 +18,8 @@ Transitions
 POST a new font to the db
   - logic to check if font already exists
   - Express router for POST
-
-UI to show selected fonts, button to remove(?)
-  - blacklist fonts so they don't show up in available fonts selection
-    separate table (Y) or 
-
+ 
+Refactor
   font-usage (name?) table with specifics of font instance
     size, weight, italic, letter-spacing, etc
 
